--- a/App/templates/Overlays/Stats.html
+++ b/App/templates/Overlays/Stats.html
@@ -9,6 +9,7 @@
     }
 </style>
 <div class="container">
+  <h3 class="center">Players Stats Comparison</h3>
     <div class="top">
         <div class="row">
           <div class="col-sm"></div>
