--- a/App/templates/RiotAPI/RiotAPI.html
+++ b/App/templates/RiotAPI/RiotAPI.html
@@ -14,4 +14,12 @@
 			</div>
 		</div>
 	</div>
+<script>
+	function SaveToken()
+	{
+		localStorage.setItem('access_token', '{{access_token}}') 
+		localStorage.setItem('refresh_token', '{{refresh_token}}') 
+	}
+	SaveToken()
+</script>
 {% endblock %}
