--- a/App/templates/Overlays/Overlay.html
+++ b/App/templates/Overlays/Overlay.html
@@ -33,6 +33,8 @@
               <input type="hidden" id="RightTeamLogo" name="RightTeamLogo" value="{{RightTeamLogo}}">
               <input type="hidden" id="LeftID" name="LeftID" value="{{LeftID}}">
               <input type="hidden" id="RightID" name="RightID" value="{{RightID}}">
+              <input type="hidden" id="RightAbb" name="RightAbb" value="{{RightAbb}}">
+              <input type="hidden" id="LeftAbb" name="LeftAbb" value="{{LeftAbb}}">
             </div>
             <div class="col-sm">
               <div class="dropdown">
@@ -65,6 +67,7 @@
     function ChangeImage1(Logo, TeamName, abb, id) {
       document.getElementById("Img1").src = "../static/logos/"+Logo;
       document.getElementById("LeftTeam").value = TeamName +" | "+abb
+      document.getElementById("LeftAbb").value = abb
       document.getElementById("LeftTeamLogo").value = Logo
       document.getElementById("dropdownMenuButton1").innerText = TeamName+" | "+abb;
       document.getElementById("LeftID").value = id
@@ -73,6 +76,7 @@
     function ChangeImage2(Logo, TeamName, abb, id) {
       document.getElementById("Img2").src = "../static/logos/"+Logo;
       document.getElementById("RightTeam").value = TeamName +" | "+abb
+      document.getElementById("RightAbb").value = abb
       document.getElementById("RightTeamLogo").value = Logo
       document.getElementById("RightID").value = id
       document.getElementById("dropdownMenuButton2").innerText = TeamName+" | "+abb;
