--- a/App/templates/Home.html
+++ b/App/templates/Home.html
@@ -18,10 +18,8 @@
             Stream Stats
         </button>
         <div class="collapse" id="A_Stream_Stats">
-          <div class="card card-body">
-            {% if code != null %}
-            <a href="{{ url_for('main.twitchauth') }}">Connect with Twitch</a>
-            {% endif %}
+          <div class="card card-body" id="A_Twtichstats">
+            
           </div>
         </div>
         <br>
@@ -37,6 +35,7 @@
               {% set Group2 = Group4 %}
             </div>
           </div>
+          
           <br>
           <br>
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" onclick="savestate('A_Player_Stats')" id="BTNA_Player_Stats" data-parent="#accordion2" data-bs-target="#A_Player_Stats" aria-expanded="false" aria-controls="collapseExample" >
@@ -91,10 +90,8 @@
           Stream Stats
         </button>
         <div class="collapse" id="B_Stream_Stats">
-          <div class="card card-body">
-            {% if code != null %}
-            <a href="{{ url_for('main.twitchauth') }}">Connect with Twitch</a>
-            {% endif %}
+          <div class="card card-body" id="B_Twtichstats">
+            {% include "HomePageWidgets/TwitchWidget.html" %}
           </div>
         </div>
         <br>
@@ -164,10 +161,23 @@
   'B_Player_Stats',
   'B_Overlay',
   'B_Schedule']
-loadstate(arry)
+  loadstate(arry)
+  function gettokens(){
+    var access_token = localStorage.getItem('access_token');
+    var refresh_token = localStorage.getItem('refresh_token');
+    if (access_token == null || refresh_token == null)
+      {
+        document.getElementById('A_Twtichstats').innerHTML = "<a href='{{ url_for('main.twitchauth') }}'>Connect with Twitch</a>"
+        document.getElementById('B_Twtichstats').innerHTML = "<a href='{{ url_for('main.twitchauth') }}'>Connect with Twitch</a>"
+      }else
+      {
+        $("#A_Twtichstats").load("HomePageWidgets/TwitchWidget.html");
+        $("#B_Twtichstats").load("HomePageWidgets/TwitchWidget.html");
+      };
+    };
+  gettokens()
   function loadstate(id)
   {
-    console.log('loaded')
     id.forEach((id)=>{
       if (localStorage.getItem(id) == 'shown')
     {
@@ -179,6 +189,7 @@ loadstate(arry)
     } 
     })
   }
+  
   function savestate(id)
   {
     
