--- a/App/templates/TwtichAPI/TwtichAPI.html
+++ b/App/templates/TwtichAPI/TwtichAPI.html
@@ -1,14 +1,15 @@
 {% extends "Base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
+<meta http-equiv="refresh" content="1;url=/" />
 <div class="pt-5">
 	<div class="container-fluid has-inner">
 		<div class="row">
 			<div class="col-3">
 			</div>
 			<div class="col-6">
-				<h1 align="center">Riot APIKey</h1>
-				
+				<h1 align="center">Twtich Authorized</h1>
+				<h1 align="center">Redirecting</h1>
 			</div>
 			<div class="col-2">
 			</div>
