--- a/App/templates/Matches/MatchAdd.html
+++ b/App/templates/Matches/MatchAdd.html
@@ -17,7 +17,7 @@
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="Team1Dropdown">
 									{% for team in teams%}
-									<li><a class="dropdown-item" onclick="SetTeam1('{{team.id}}','{{team.name}}','{{team.abbreviation}}')">{{team.name}} | {{team.abbreviation}}</a></li>
+									<li><a class="dropdown-item" onclick="SetTeam1('{{team.id}}','{{team.name}}','{{team.abbreviation}}')">{{team.abbreviation}} | {{team.description}}</a></li>
 									{% endfor %}
 								</ul>
 								
@@ -31,7 +31,7 @@
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="Team2Dropdown">
 									{% for team in teams%}
-									<li><a class="dropdown-item" onclick="SetTeam2('{{team.id}}','{{team.name}}','{{team.abbreviation}}')">{{team.name}} | {{team.abbreviation}}</a></li>
+									<li><a class="dropdown-item" onclick="SetTeam2('{{team.id}}','{{team.name}}','{{team.abbreviation}}')">{{team.abbreviation}} | {{team.description}}</a></li>
 									{% endfor %}
 								</ul>
 								
