--- a/App/templates/Teams/TeamEdit.html
+++ b/App/templates/Teams/TeamEdit.html
@@ -23,30 +23,27 @@
                     </div>
                     <div class="row">
                         <div class='col-sm'>
-                            <img src="../static/logos/{{data.logoTXT}}">
-                            <div class="form-group  required"><label class="control-label" for="LogoTXT">LogoTXT</label>
-                                <input id="LogoTXT" name="LogoTXT" type="file"accept="image/*"> 
-                                
+                            <div class="form-group  required"><label class="control-label" for="Description">Description</label>
+                                <input class="form-control" id="Description" name="Description" required type="text" value="{{data.description}}">
                             </div>
                         </div>
                         <div class='col-sm'>
-                            <img src="../static/logos/{{data.logoTOP}}">
-                            <div class="form-group  required"><label class="control-label" for="LogoTOP">LogoTOP</label>
-                                <input id="LogoTOP" name="LogoTOP" type="file"accept="image/*"> 
+                            <div class="form-group  required"><label class="control-label" for="Colour">Colour</label>
+                                <input class="form-control" id="Colour" name="Colour" required type="text" value="{{data.colour}}">
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class='col-sm'>
-                            <img src="../static/logos/{{data.logoBL}}">
-                            <div class="form-group  required"><label class="control-label" for="LogoBL">LogoBL</label>
-                                <input id="LogoBL" name="LogoBL" type="file"accept="image/*"> 
+                            <img src="../static/logos/{{data.logoBlue}}">
+                            <div class="form-group  required"><label class="control-label" for="LogoBlue">LogoBlue</label>
+                                <input id="LogoBlue" name="LogoBlue" type="file"accept="image/*"> 
                             </div>
                         </div>
                         <div class='col-sm'>
-                            <img src="../static/logos/{{data.logoBR}}">
-                            <div class="form-group  required"><label class="control-label" for="LogoBR">LogoBR</label>
-                                <input id="LogoBR" name="LogoBR" type="file"accept="image/*"> 
+                            <img src="../static/logos/{{data.logoRed}}">
+                            <div class="form-group  required"><label class="control-label" for="LogoRed">LogoRed</label>
+                                <input id="LogoRed" name="LogoRed" type="file"accept="image/*"> 
                             </div>
                         </div>
                     </div>
