--- a/App/templates/Matches/MatchGetStats.html
+++ b/App/templates/Matches/MatchGetStats.html
@@ -1,14 +1,16 @@
 {% extends "Base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
+<h1 class="center">Get Stats</h1>
+<h2 class="center">Make sure the player you select was in the match</h2>
 <div class="pt-5">
 	<div class="container-fluid has-inner">
 		<div class="row">
 			<div class="col-3">
 			</div>
 			<div class="col-6">
-				<h1 class="center">Music Upload</h1>
-				{{wtf.quick_form(form, action=url_for('main.submit'))}}
+				
+				{{wtf.quick_form(form, action=url_for('MatchesBP.StatsSubmit'))}}
 			</div>
 			<div class="col-2">
 			</div>
