--- a/App/templates/Teams/TeamEdit.html
+++ b/App/templates/Teams/TeamEdit.html
@@ -35,13 +35,13 @@
                     </div>
                     <div class="row">
                         <div class='col-sm'>
-                            <img src="../static/logos/{{data.logoBlue}}">
+                            <img style="width:192px;" src="../static/logos/{{data.logoBlue}}">
                             <div class="form-group  required"><label class="control-label" for="LogoBlue">LogoBlue</label>
                                 <input id="LogoBlue" name="LogoBlue" type="file"accept="image/*"> 
                             </div>
                         </div>
                         <div class='col-sm'>
-                            <img src="../static/logos/{{data.logoRed}}">
+                            <img style="width:192px;" src="../static/logos/{{data.logoRed}}">
                             <div class="form-group  required"><label class="control-label" for="LogoRed">LogoRed</label>
                                 <input id="LogoRed" name="LogoRed" type="file"accept="image/*"> 
                             </div>
