Match Sorting added

--- a/App/templates/Base.html
+++ b/App/templates/Base.html
@@ -59,7 +59,7 @@
 					</div>
 				</li>
 				<li class="nav-item"><a class="nav-link" href={{url_for('CastersBP.casters')}}>Casters</a></li>
-				<li class="nav-item"><a class="nav-link" href={{url_for('MatchesBP.match')}}>Matches</a></li>
+				<li class="nav-item"><a class="nav-link" href={{url_for('MatchesBP.match')}}?time=hour>Matches</a></li>
 				<li class="nav-item"><a class="nav-link" href={{url_for('MusicBP.music')}}>Music</a></li>
 				<li class="nav-item"><a class="nav-link" href={{url_for('TeamsBP.teams')}}>Teams</a></li>
 				<li class="nav-item dropdown">
